--- a/css/index.css
+++ b/css/index.css
@@ -56,10 +56,11 @@ select{
 	color: black;
 }
 
-.main-section{
+.my-main{
 	background-image: url(../source/img/slide-bg-complexity.jpg);
 	display: block;
 	background-position: center 0px;
+    padding-bottom: 20px;
 }
 
 h2{
@@ -77,7 +78,7 @@ p{
 	margin-left: 20%;
 }
 
-.btn
+.knopka
 {
     display: block;
     background: #2793C9;
@@ -91,7 +92,7 @@ p{
     margin-left: 20%;
 }
 
-.btn:after
+.knopka:after
 {
 	content: url('../source/img/btnArrow.png');
     position: relative;
@@ -100,7 +101,7 @@ p{
     float: right; 
 }
 
-.btn:hover
+.knopka:hover
 {
     background: #379fd3;
 }
@@ -140,9 +141,9 @@ p{
     font-size: 20px;
     font-weight: 300;
     border-radius: 5px;
-    transition: all 0.2s ease-out;
+    
     display: inline-block;
-    padding: 10px;
+    padding: 8px;
     padding-top: 13px;
     padding-bottom: 20px;
     width: 250px;
@@ -162,10 +163,25 @@ p{
     bottom: 12px;
 }
 
-.sticker a:before
+.pinkBg a:before
 {
     position: relative;
-    content: url('../img/link-icon-image.png');
+    content: url('../source/img/link-icon.png');
+    top: 9px;
+    right: 5px;
+}
+
+.greenBg a:before
+{
+    position: relative;
+    content: url('../source/img/file-icon.png');
+    top: 9px;
+    right: 5px;
+}
+.orangeBg a:before
+{
+    position: relative;
+    content: url('../source/img/play-icon.png');
     top: 9px;
     right: 5px;
 }
@@ -198,7 +214,10 @@ p{
 {
     background:rgb(255, 102, 0);
 }
-
+.obolochka{
+    padding: 10px;
+    padding-top: 15px;
+}
  
 
 
