--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 body {
-	font-family: 'Open Sans', sans-serif;
-	/*font-size: 60%;*/
+    font-family: 'Open Sans', sans-serif;
+    /*font-size: 60%;*/
     margin: 0px; 
     padding: 0px; 
 }
@@ -11,73 +11,74 @@ body {
     
 }
 .inline{
-	display: inline-block;
-	position: relative;
+    display: inline-block;
+    position: relative;
 }
 #nav-list{
-	/*position: relative;*/
-	text-align: center;
+    /*position: relative;*/
+    text-align: center;
 }
 a{
-	color:inherit;
-	text-decoration: none;
+    color:inherit;
+    text-decoration: none;
 }
 
 #query{
-	border-width: 1px;
-	width: 50%;
-	border: 1px solid #D0D0D0; 
-	border-right: none;
-	border-top-left-radius: 5px;
-	border-bottom-left-radius: 5px;
-	float: left;
-	height: 1.1rem;
-	padding: .1rem .5rem;
+    border-width: 1px;
+    width: 50%;
+    border: 1px solid #D0D0D0; 
+    border-right: none;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    float: left;
+    height: 1.1rem;
+    padding: .1rem .5rem;
 }
 #searchImg{
-	border-width: 1px;
-	border-top-right-radius: 5px;
-	border-bottom-right-radius: 5px;
-	border: 1px solid #D0D0D0;
+    border-width: 1px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border: 1px solid #D0D0D0;
 
-	display: block;
-	padding: .1rem .5rem;
-	margin-top: 1rem;
-	height: 1.1rem;
+    display: block;
+    padding: .1rem .5rem;
+    margin-top: 1rem;
+    height: 1.1rem;
 }
 select{
-	border:transparent;
+    border:transparent;
 }
 .lang{
-	text-align: left;
-	margin-bottom: 1.3rem;
+    text-align: left;
+    margin-bottom: 1.3rem;
 }
 #custLog{
-	width: 50%;
-	margin-top: .1rem;
-	color: black;
+    width: 50%;
+    margin-top: .1rem;
+    color: black;
 }
 
 .my-main{
-	background-image: url(../source/img/slide-bg-complexity.jpg);
-	display: block;
-	background-position: center 0px;
+    background-image: url(../source/img/slide-bg-complexity.jpg);
+    display: block;
+    background-position: center 0px;
     padding-bottom: 20px;
+
 }
 
 h2{
-	color: white;
-	width: 50%;
+    color: white;
+    width: 50%;
     margin-left: 20%;
     font-weight: normal;
     margin-bottom: 0px;
     font-size: 201%;
-	page-break-after: avoid
+    page-break-after: avoid
 }
 
 p{
-	color: white;
-	margin-left: 20%;
+    color: white;
+    margin-left: 20%;
 }
 
 .knopka
@@ -96,7 +97,7 @@ p{
 
 .knopka:after
 {
-	content: url('../source/img/btnArrow.png');
+    content: url('../source/img/btnArrow.png');
     position: relative;
     right: -7px;
     top: 2px;
@@ -128,7 +129,7 @@ p{
     background-color: #3399CE;
 }
 .skolzit-n{
-	display: none;
+    display: none;
 }
 .list-parts
 {
@@ -222,4 +223,314 @@ p{
 }
  
 
+body {
+    font-family: 'Open Sans', sans-serif;
+    /*font-size: 60%;*/
+    margin: 0px; 
+    padding: 0px; 
+}
 
+#nav-list li{
+    display: inline;
+    margin: 1%;
+    
+}
+.inline{
+    display: inline-block;
+    position: relative;
+}
+#nav-list{
+    /*position: relative;*/
+    text-align: center;
+}
+a{
+    color:inherit;
+    text-decoration: none;
+}
+
+#query{
+    border-width: 1px;
+    width: 50%;
+    border: 1px solid #D0D0D0; 
+    border-right: none;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    float: left;
+    height: 1.1rem;
+    padding: .1rem .5rem;
+}
+#searchImg{
+    border-width: 1px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border: 1px solid #D0D0D0;
+
+    display: block;
+    padding: .1rem .5rem;
+    margin-top: 1rem;
+    height: 1.1rem;
+}
+select{
+    border:transparent;
+}
+.lang{
+    text-align: left;
+    margin-bottom: 1.3rem;
+}
+#custLog{
+    width: 50%;
+    margin-top: .1rem;
+    color: black;
+}
+
+.my-main{
+    background-image: url(../source/img/slide-bg-complexity.jpg);
+    display: block;
+    background-position: center 0px;
+    padding-bottom: 20px;
+}
+
+h2{
+    color: white;
+    width: 50%;
+    margin-left: 20%;
+    font-weight: normal;
+    margin-bottom: 0px;
+    font-size: 201%;
+    page-break-after: avoid
+}
+
+p{
+    color: white;
+    margin-left: 20%;
+}
+
+.knopka
+{
+    display: block;
+    background: #2793C9;
+    color: white;
+    font-size: 14px;   
+    border-radius: 5px;
+    padding: 7px;
+    padding-left: 10px;
+    padding-right: 15px;
+    width: 10%;
+    margin-left: 20%;
+}
+
+.knopka:after
+{
+    content: url('../source/img/btnArrow.png');
+    position: relative;
+    right: -7px;
+    top: 2px;
+    float: right; 
+}
+
+.knopka:hover
+{
+    background: #379fd3;
+}
+
+.skolzit
+{
+    padding-left: 10px;
+    margin-left: 19.5%;
+}
+.skolzit-k
+{
+    display: inline-block;
+    background-color: #E5E5E5;
+    margin-right: 4px;
+    border-radius: 3px;
+    cursor: pointer;
+    height: 12px;
+    width: 12px;
+}
+.first
+{
+    background-color: #3399CE;
+}
+.skolzit-n{
+    display: none;
+}
+.list-parts
+{
+    position: relative;
+    padding: 0;
+    margin: 0 auto;
+    margin-left: 20%;
+}
+.part
+{
+    position: relative;
+    font-size: 20px;
+    font-weight: 300;
+    border-radius: 5px;
+    
+    display: inline-block;
+    padding: 8px;
+    padding-top: 13px;
+    padding-bottom: 20px;
+    width: 250px;
+    height: 120px;
+    margin-right: 30px;
+    margin-top: 40px;
+    cursor: pointer;
+    vertical-align: top;
+}
+.part a
+{
+    position: absolute;
+    color: white;
+    font-size: 13px;
+    font-weight: 600;
+    margin-left: 5px;
+    bottom: 12px;
+}
+
+.pink a:before
+{
+    position: relative;
+    content: url('../source/img/link-icon.png');
+    top: 9px;
+    right: 5px;
+}
+
+.green a:before
+{
+    position: relative;
+    content: url('../source/img/file-icon.png');
+    top: 9px;
+    right: 5px;
+}
+.orange a:before
+{
+    position: relative;
+    content: url('../source/img/play-icon-image.png');
+    top: 9px;
+    right: 5px;
+}
+.pink
+{
+    background:rgba(244, 34, 139, 0.8);
+}
+
+.pink:hover
+{
+    background:rgb(244, 34, 139);
+}
+
+.green
+{
+    background:rgba(72, 196, 5, 0.8);
+}
+
+.green:hover
+{
+    background:rgb(72, 196, 5);
+}
+
+.orange
+{
+    background:rgba(255, 102, 0, 0.8);
+}
+
+.orange:hover
+{
+    background:rgb(255, 102, 0);
+}
+.obolochka{
+    padding: 10px;
+    padding-top: 15px;
+}
+.center{
+    text-align: center;
+    margin: 0 auto;
+}
+.we-do{
+    background-image: url('../source/img/services-bg.png');
+    width: 100%;
+    padding-top: 11px;
+    padding-bottom: 48px;
+    background: radial-gradient(#59BEDC 1%, #3399CE 98%);
+}
+.we-do li
+{
+    display: inline-block;
+    margin-right: 0px;
+    position: relative;
+    text-align: center;
+    vertical-align: top;
+    margin-bottom: 30px;
+}
+.we-do a
+{
+    color: white;
+}
+.we-do li span
+{
+    display: block;
+}
+.data-monit,
+.robot,
+.flag,
+.cloud,
+.manage,
+.social
+{
+    display: block;
+    position: relative;
+    margin-bottom: 10px;
+}
+.data-monit
+{
+    content: url('../source/img/data-monetization.png');
+}
+
+.data-monit:hover
+{
+    content: url('../source/img/data-monetization.png');
+}
+.robot
+{
+    content: url('../source/img/robot-icon.png');
+}
+.robot:hover
+{
+    content: url('../source/img/robot-icon.png');
+}
+.flag
+{
+    content: url('../source/img/flag-icon.png');
+}
+.flag:hover
+{
+    content: url('../source/img/flag-icon.png');
+}
+.cloud
+{
+    content: url('../source/img/cloud-icon.png');
+}
+}
+.cloud:hover
+{
+    content: url('../source/img/cloud-icon.png');
+}
+.manage
+{
+    content: url('../source/img/managed-services.png');
+}
+.manage:hover
+{
+    content: url('../source/img/managed-services.png');
+}
+.social
+{
+    content: url('../source/img/social-icon.png');
+}
+.social:hover
+{
+    content: url('../source/img/social-icon.png');
+}
